# mae

./: .gitignore  Phase_A_tmux.py  Phase_B_tmux.py  Phase_B_top3_tmux.py  Phase_C_tmux.py  README.md  ablation.py  diff.txt  engine_finetune.py  infer_yolov8.py  main_finetune.py  main_linprobe.py  main_pretrain.py  requirements.txt  train_yolov8.py
ablation_results/: mse_summary.txt
ablation_results_fda/: mse_summary.txt
bbox_inference/: README.md  pyproject.toml
bbox_inference/src/boxinfer/: __init__.py  detector.py  export.py  offline_test.py  timing.py  types.py  visualization.py
bbox_inference/src/mae_bbox_inference/: __init__.py  export.py  offline_test.py  timing.py
configs/: phase1_template.yaml
dual_yolo_mae/: Phase1_tmux.py  Phase1_v2_tmux.py  Phase1_v3_tmux.py  callbacks.py  config.yaml  infer.py  metrics.py  model.py  train.py  train_phase1.py  utils.py  utils_wandb.py
mae/configs/: train_mae.yaml
mae/lightning/: inference_reconstruction.py  train.py
odad/: adapters.py  online_adapt.py  shadow_odad_manager.py  stream_eval.py
odad/adapter_l18_l21_full/: adapt_log.csv  summary.txt
odad/baseline_stream_test/: stream_eval.csv  summary.txt
odad/clean_topk2_smoke_300/: adapt_log.csv  summary.txt
odad/memadapter_mem_film_dim16_full/: adapt_log.csv  summary.txt
odad/membank_bank16_top2_teacherroi_full/: adapt_log.csv  summary.txt
odad/memcontrast_contrast_w010_full/: adapt_log.csv  summary.txt
odad/memcross_cross_add_s10_full/: adapt_log.csv  summary.txt
odad/memdiv_bank16_diverse085_full/: adapt_log.csv  summary.txt
odad/online_adapt_buffered_final_model/: adapt_log.csv  summary.txt
odad/online_adapt_buffered_headonly_full/: adapt_log.csv
odad/online_adapt_buffered_neck_head_full/: adapt_log.csv  summary.txt
odad/online_adapt_buffered_neckhead_full_v2/: adapt_log.csv  summary.txt
odad/online_adapt_buffered_smoketest/: adapt_log.csv
odad/online_adapt_buffered_smoketest_neck_head/: adapt_log.csv  summary.txt
odad/online_adapt_consistency_neck_debug/: adapt_log.csv  adapt_summary.txt  first_update_activation_debug.txt  first_update_debug.csv  first_update_debug.txt  update_debug.csv  update_debug_summary.txt
odad/online_adapt_final_weights_smoketest/: adapt_log.csv  summary.txt
odad/online_adapt_lab/: adapt_log.csv  adapt_summary.txt
odad/online_adapt_lab_neck_head_update/: adapt_log.csv  adapt_summary.txt  first_update_activation_debug.txt  first_update_debug.txt  update_debug.csv  update_debug_summary.txt
odad/online_adapt_lab_new_metrics/: adapt_log.csv  adapt_summary.txt
quad_charts/: quad_chart.tex
rossification/: ROS.md
rossification/theo_perception/: package.xml
rossification/theo_perception/config/: yolov8_fda_node.yaml
rossification/theo_perception/launch/: yolov8_fda_launch.py
rossification/theo_perception/theo_perception/: letterbox_utils.py  yolov8_fda_node.py
scripts/: launch_short_runs.sh  sanity_checks.sh
tools/: ablation.py  adapter_sweep_report.py  assets.json  benchmark_inference.py  build_fda_yolo_dataset.py  build_fda_yolo_dataset_multi.py  build_source_object_memory.py  clip_label_space.py  download_hdris.py  export_to_trt.py  json_to_yolo.py  make_odad_reporting_summary.py  make_space_probe_split.py  odad_failure_audit.py  odad_threshold_policy_eval.py  prepare_yolo_seg_dataset.py  run_phase1.sh  scraper.py  validate_mae_checkpoint.py  verify_yolo_seg_dataset.py  yaml_creation.py  yolo_ablation.py  yolo_seg_ablation.py
ultralytics/: __init__.py
ultralytics_mae/: __init__.py
util/: compat.py  crop.py  datasets.py  misc.py
utils/: wandb_utils.py
yolo/: config.yaml  train_yolov8_seg.py
(+217 files in other folders)
