# Build backend used by pip/uv editable install
[build-system]
requires        = ["setuptools>=64", "wheel"]
build-backend   = "setuptools.build_meta"

# Inference-only package metadata
[project]
name            = "mae-bbox-inference"
version         = "0.1.0"
description     = "Standalone YOLO bbox inference utilities for ONNX and TensorRT"
readme          = "README.md"
requires-python = ">=3.10"
dependencies    = [
                    "numpy",
                    "opencv-python",
                    "onnxruntime",
                    "ultralytics",
                    "matplotlib",
                ]

# optional GPU runtime extras
[project.optional-dependencies]
tensorrt        = [
                    "tensorrt",
                    "pycuda",
                ]

# CLI entry points for export/test/visualization
# this avoids doing the following in the terminal
# python -m mae_bbox_inference.offline_test ...
# python -m mae_bbox_inference.export ...
# python -m mae_bbox_inference.visualization ...

[project.scripts]
mae-bbox-offline-test   = "mae_bbox_inference.offline_test:main"
mae-bbox-export-trt     = "mae_bbox_inference.export:main"
mae-bbox-visualize-csv  = "mae_bbox_inference.visualization:main"

# src/ layout package discovery
[tool.setuptools.packages.find]
where           = ["src"]
include         = ["mae_bbox_inference*"]
